--- a/roles/openshift_clock_facts/tasks/main.yaml
+++ b/roles/openshift_clock_facts/tasks/main.yaml
@@ -4,19 +4,20 @@
   when:  openshift_clock_method is defined and
     openshift_clock_method not in ["none", "auto", "ntpd", "chrony"]
 
-- set_fact:
-    openshift_clock_method: chrony
-  when: openshift_clock_method is defined and openshift_clock_method == "auto" and
-    openshift.common.is_containerized and openshift.common.is_atomic
-
-- set_fact:
-    openshift_clock_method: ntpd
-  when: openshift_clock_method is defined and openshift_clock_method == "auto"
-
 - fail:
     msg: "openshift_clock_method 'ntpd' is not compatible with atomic host"
   when:  openshift_clock_method is defined and openshift_clock_method == 'ntpd' and
-    openshift.common.is_containerized and openshift.common.is_atomic
+    openshift.common.is_atomic
+
+- set_fact:
+    openshift_clock_auto_method: chrony
+  when: openshift_clock_method is defined and openshift_clock_method == "auto" and
+    openshift.common.is_atomic
+
+- set_fact:
+    openshift_clock_auto_method: ntpd
+  when: openshift_clock_method is defined and openshift_clock_method == "auto" and
+    not openshift.common.is_atomic
 
 - name: Set clock facts
   openshift_facts:
@@ -25,8 +26,8 @@
   with_items:
   - role: clock
     local_facts:
-      method: "{{ openshift_clock_method | default(None) }}"
-      require_sync: "{{ openshift_clock_require_sync | default(None) }}"
+      method: "{{ openshift_clock_auto_method | default(openshift_clock_method) | default(None) }}"
+      require_sync: "{{ openshift_clock_auto_method | default(openshift_clock_require_sync) | default(None) }}"
       timezone: "{{ openshift_clock_timezone | default(None) }}"
 
 - set_fact:
