--- a/roles/openshift_facts/tasks/main.yml
+++ b/roles/openshift_facts/tasks/main.yml
@@ -5,15 +5,13 @@
   when: ansible_version.full | version_compare('1.9.4', 'lt') or ansible_version.full | version_compare('2.0', 'ge')
 
 - name: Detecting Operating System
-  shell: ls /run/ostree-booted
-  ignore_errors: yes
-  failed_when: false
-  changed_when: false
-  register: ostree_output
+  stat:
+    path: /run/ostree-booted
+  register: ostree_booted
 
 # Locally setup containerized facts for now
 - set_fact:
-    l_is_atomic: "{{ ostree_output.rc == 0 }}"
+    l_is_atomic: "{{ ostree_booted.stat.exists }}"
 - set_fact:
     l_is_containerized: "{{ (l_is_atomic | bool) or (containerized | default(false) | bool) }}"
 
@@ -44,8 +42,8 @@
       https_proxy: "{{ openshift_https_proxy | default(None) }}"
       no_proxy: "{{ openshift_no_proxy | default(None) }}"
       generate_no_proxy_hosts: "{{ openshift_generate_no_proxy_hosts | default(True) }}"
-      no_proxy_internal_hostnames: "{{ hostvars | oo_select_keys(groups['oo_nodes_to_config'] 
-                                                   | union(groups['oo_masters_to_config']) 
-                                                   | union(groups['oo_etcd_to_config'] | default([]))) 
+      no_proxy_internal_hostnames: "{{ hostvars | oo_select_keys(groups['oo_nodes_to_config']
+                                                   | union(groups['oo_masters_to_config'])
+                                                   | union(groups['oo_etcd_to_config'] | default([])))
                                                | oo_collect('openshift.common.hostname') | default([]) | join (',')
                                                }}"
