--- a/roles/openshift_node_dnsmasq/tasks/main.yml
+++ b/roles/openshift_node_dnsmasq/tasks/main.yml
@@ -18,6 +18,16 @@
     src: origin-dns.conf.j2
     dest: /etc/dnsmasq.d/origin-dns.conf
 
+- name: Deploy additional dnsmasq.conf
+  template:
+   src: "{{ openshift_node_dnsmasq_additional_config_file }}"
+   dest: /etc/dnsmasq.d/openshift-ansible.conf
+   owner: root
+   group: root
+   mode: 0644
+  when: openshift_node_dnsmasq_additional_config_file is defined
+  notify: restart dnsmasq
+
 # Dynamic NetworkManager based dispatcher
 - include: ./network-manager.yml
   when: network_manager_active | bool
