--- a/playbooks/libvirt/openshift-cluster/config.yml
+++ b/playbooks/libvirt/openshift-cluster/config.yml
@@ -2,6 +2,9 @@
 # TODO: need to figure out a plan for setting hostname, currently the default
 # is localhost, so no hostname value (or public_hostname) value is getting
 # assigned
+
+- include: ../../common/openshift-cluster/verify_ansible_version.yml
+
 - hosts: localhost
   gather_facts: no
   tasks:
