--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -199,7 +199,7 @@
 - name: Deploy named certificates
   hosts: oo_masters_to_config
   vars:
-    named_certs_dir: "{{ master_cert_config_dir }}/named_certificates/"
+    named_certs_dir: "{{ openshift.common.config_base }}/master/named_certificates/"
     named_certs_specified: "{{ openshift_master_named_certificates is defined }}"
     overwrite_named_certs: "{{ openshift_master_overwrite_named_certificates | default(false) }}"
   roles:
