--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -224,11 +224,11 @@
     when: named_certs_specified | bool
   - name: Land named certificates
     copy: src="{{ item.certfile }}" dest="{{ named_certs_dir }}"
-    with_items: openshift_master_named_certificates
+    with_items: "{{ openshift_master_named_certificates }}"
     when: named_certs_specified | bool
   - name: Land named certificate keys
     copy: src="{{ item.keyfile }}" dest="{{ named_certs_dir }}" mode=0600
-    with_items: openshift_master_named_certificates
+    with_items: "{{ openshift_master_named_certificates }}"
     when: named_certs_specified | bool
 
 - name: Configure masters
