--- a/roles/openshift_examples/tasks/main.yml
+++ b/roles/openshift_examples/tasks/main.yml
@@ -65,12 +65,15 @@
     path: "{{ item }}"
     state: absent
   with_items:
-    - "{{ xpaas_templates }}/sso70-basic.json"
+    - "{{ xpaas_templates_base }}/sso70-basic.json"
 
 - name: Remove old xPaas templates from openshift namespace
-  command: oc delete -n openshift {{ item }}
+  command: "{{ openshift.common.client_binary }} -n openshift delete templates/{{ item }}"
   with_items:
     - sso70-basic
+  register: oex_delete_old_xpaas_templates
+  failed_when: "'not found' not in oex_delete_old_xpaas_templates.stderr and oex_delete_old_xpaas_templates.rc != 0"
+  changed_when: false
 
 - name: Import xPaas image streams
   command: >
